--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-################################################################################
-# Never commit compilation (by-)products and machine-specific settings
-################################################################################
-
-.vscode
-.vs
-build
-out
-Debug
-Release
-x64
-*.user
-CMakeSettings.json
+out/*
+.vscode/*
+.qt/*
+CMakeFiles/*
+editor1/CMakeFiles/*
+editor1/cmake_install.cmake
+editor1/Makefile
+cmake_install.cmake
+CMakeCache.txt
+Makefile
+editor1app
+editor1app_autogen/*
+editor1/editor1_autogen/*
