this worked once on windows

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
-out/*
-.vscode/*
-.qt/*
+*.vcxproj*
+*.sln
+.vs/*
+Debug/*
+Release/*
+x64/*
 CMakeFiles/*
-editor1/CMakeFiles/*
-editor1/cmake_install.cmake
-editor1/Makefile
+editorMain.dir/*
 cmake_install.cmake
 CMakeCache.txt
-Makefile
-editor1app
-editor1app_autogen/*
-editor1/editor1_autogen/*
