--- a/editor1/CMakeLists.txt
+++ b/editor1/CMakeLists.txt
@@ -1,3 +1,3 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-add_executable (editor1 "editor1.cpp" "editor1.h" "example_cpp_file.cpp" "example_cpp_file.h")
+#add_executable (editor1 "editor1.cpp" "editor1.h" "example_cpp_file.cpp" "example_cpp_file.h")
