linux fix? check on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,14 +18,14 @@ find_package(PkgConfig REQUIRED)
 find_package(Threads REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 
-pkg_check_modules(GTK4 REQUIRED gtk4)
 PKG_CHECK_MODULES(GTKMM gtkmm-4.0)
 pkg_check_modules(GTKMM_VARS REQUIRED IMPORTED_TARGET gtkmm-4.0)
 pkg_search_module(LIBSIGCPP REQUIRED sigc++ sigc++-3.0)
+pkg_check_modules(GTK4 REQUIRED gtk4)
 
 ####################################  
 
-set(CODE_LOC "../editorMain/editor1")
+set(CODE_LOC "./editor1")
 add_executable(editorMain "${CODE_LOC}/editor1.cpp" "${CODE_LOC}/editor1.h" "${CODE_LOC}/example_cpp_file.cpp" 
 "${CODE_LOC}/example_cpp_file.h")
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT editorMain)
@@ -37,7 +37,7 @@ target_link_directories(editorMain PRIVATE ${GTK4_LIBRARY_DIRS} ${GTKMM_LIBRARY_
 target_link_libraries(editorMain PRIVATE ${GTKMM_LIBRARIES} fmt::fmt PkgConfig::GTKMM_VARS ${LIBSIGCPP_LINK_LIBRARIES})
 
 add_definitions(${GTK4_CFLAGS_OTHER})
-target_compile_definitions(editorMain PRIVATE ${GTKMM_CFLAGS_OTHER})
+target_compile_options(editorMain PRIVATE ${GTKMM_CFLAGS_OTHER})
 
 # Zahrňte podprojekty.
 add_subdirectory ("editor1")
