--- a/ubuntu_dockerfile/Dockerfile
+++ b/ubuntu_dockerfile/Dockerfile
@@ -7,6 +7,7 @@ RUN apt update && apt -y install sudo build-essential cmake gdb nasm pkg-config 
 RUN apt update && apt -y install curl zip unzip tar python3 bison libx11-dev libxft-dev libxext-dev autoconf libtool libxrandr-dev libxi-dev
 RUN apt update && apt -y install libxcursor-dev libxdamage-dev libxinerama-dev libdrm-dev
 
+RUN git clone https://github.com/microsoft/vcpkg.git
 # Create a non-root user
 ARG UID=1000
 RUN useradd -m -u ${UID} -s /bin/bash builder
